<resources>
    <string name="app_name">Lab 2:Message and Receive</string>
    <string name="button_send">Send</string>
    <string name="message_received">Message Received</string>
    <string name="message_hint">Type Your Message Here</string>
    <string name="reply">Reply</string>
    <string name="reply_hint">Enter Your Reply Here</string>
    <string name="reply_received_textView">Reply Received</string>
    <string name="implicit_intent_activitiy">Implicit Intent Activity</string>


    <!-- Implicit Activity Strings -->
    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
    <string name="chooser_tilte">\"Share text with: \"</string>
    <string name="take_a_picture">Take A Picture</string>
</resources>
